<resources>
    <string name="app_name">Control de Asistencia - CR3C</string>
    <string name="team_category">Introduce tu categoría</string>
    <string name="save">Guardar</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="category">Categoría</string>
    <string name="enter_name">Introduce el nombre</string>
    <string name="enter_surname">Introduce los apellidos</string>
    <string name="new_player">Nuevo jugador</string>
    <string name="no_players">Añade algún jugador a esta categoría</string>
    <string-array name="category_array">
        <item>Sub18</item>
        <item>Sub16</item>
        <!--
            <item>Sub14</item>
            <item>Sub12</item>
            <item>Sub10</item>
            <item>Sub8</item>
            <item>Sub6</item>
        -->
    </string-array>
</resources>
